--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="UTF-8">
@@ -26,6 +25,7 @@
                 color: red;
                 font-weight: bold;
             }
+
         </style>
     </head>
     <body>
@@ -42,30 +42,15 @@
             <input type="text" id="image-url" required>
 
             <button type="submit">Create Product</button>
-            <p id="error-message">Hi</p>
+            <p id="error-message"></p>
         </form>
 
 
-        <form>
+        <form id="add-to-cart">
             <div id="dashboard" style="border: solid black 1px;">
-                <div class="product-card">
-                    <input type="checkbox" id="product-1">
-                    <img src="colmar-academy-spec.png" height="120" width="120">
-                    <div style="padding-left: 15px;">
-                        <h3>Product 1</h3>
-                        <p>$10.00</p>
-                    </div>
-                </div>
-                <div class="product-card">
-                    <input type="checkbox" id="product-2">
-                    <img src="colmar-academy-spec.png" height="120" width="120">
-                    <div style="padding-left: 15px;">
-                        <h3>Product 2</h3>
-                        <p>$10.00</p>
-                    </div>
-                </div>
+                <!-- Products in Dashboard -->
             </div>
-            <button id="add-to-cart" type="submit">Add to Cart</button>
+            <button id="add-to-cart-btn" type="submit" style="display: none;">Add to Cart</button>
         </form>
 
         <br>
@@ -92,7 +77,6 @@
         </form>
 
         <h2>You have to pay: 10</h2>
-        <script>document.getElementById("product-1").checked = true;</script>
         <script src="script.js"></script>
     </body>
 </html>
